--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,10 @@ Title: Penalised regression with multiple sets of prior coefficients
 Version: 0.0.1
 Authors@R: person("Armin","Rauschenberger",,"armin.rauschenberger@uni.lu",role=c("aut","cre"),comment=c(ORCID="0000-0001-6498-4801"))
 Description: Improves the predictive performance of ridge and lasso regression exploiting (potentially conflicting) prior information on the importance and direction of effects.
-License: use_gpl3_license()
+Imports: glmnet, joinet, palasso
+Suggests: knitr, testthat, rmarkdown
+Enhances: GRridge, fwelnet, glmtrans, mvtnorm, CVXR
+License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown=TRUE)
+RoxygenNote: 7.1.2
