--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ S3method(coef,multiridge)
 S3method(coef,transreg)
 S3method(predict,multiridge)
 S3method(predict,transreg)
+export(.residuals)
 export(cv.transfer)
 export(multiridge)
-export(residuals)
 export(transreg)
