--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,6 @@ Suggests: knitr, testthat, rmarkdown
 Enhances: GRridge, fwelnet, glmtrans, mvtnorm, CVXR, ecpc, multiridge, scam, starnet
 License: GPL-3
 Encoding: UTF-8
+URL: https://rauschenberger.github.io/transreg/
 Roxygen: list(markdown=TRUE)
 RoxygenNote: 7.2.0
