--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(coef,multiridge)
 S3method(coef,transreg)
 S3method(predict,multiridge)
 S3method(predict,transreg)
+S3method(print,transreg)
 export(.residuals)
 export(cv.transfer)
 export(multiridge)
