--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ S3method(coef,transreg)
 S3method(predict,multiridge)
 S3method(predict,transreg)
 S3method(print,transreg)
+S3method(weights,transreg)
 export(.residuals)
 export(cv.transfer)
 export(multiridge)
 export(transreg)
+importFrom(stats,weights)
