--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ S3method(predict,transreg)
 S3method(print,transreg)
 S3method(weights,transreg)
 export(.residuals)
-export(cv.transfer)
+export(compare)
 export(multiridge)
 export(transreg)
 importFrom(stats,weights)
