--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(coef,multiridge)
 S3method(coef,transreg)
 S3method(fitted,transreg)
+S3method(plot,transreg)
 S3method(predict,multiridge)
 S3method(predict,transreg)
 S3method(print,transreg)
@@ -11,4 +12,5 @@ export(.residuals)
 export(compare)
 export(multiridge)
 export(transreg)
+importFrom(stats,fitted)
 importFrom(stats,weights)
