--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,9 @@ Description: Improves the predictive performance of ridge and lasso regression e
 Imports: glmnet, joinet
 Suggests: knitr, testthat, rmarkdown
 Enhances: GRridge, fwelnet, glmtrans, mvtnorm, CVXR, ecpc, multiridge, scam, starnet
+VignetteBuilder: knitr
 License: GPL-3
 Encoding: UTF-8
-URL: https://rauschenberger.github.io/transreg/
 Roxygen: list(markdown=TRUE)
 RoxygenNote: 7.2.1
 Vignettes: analysis
