--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,43 +1,4 @@
-url: ~
+url: https://lcsb-bds.github.io/transreg/
 template:
   bootstrap: 5
 
-home:
-  sidebar:
-    structure: [links, community, citation, authors, dev]
-
-navbar:
-  title: "starnet"
-  left:
-    - text: "functions"
-      href: reference/index.html
-    - text: "script"
-      href: articles/analysis.html
-    - text: "news"
-      href: news/index.html
-
-reference:
-
-- title: "R Package"
-  contents:
-  - transreg-package
-
-- title: "Main functions"
-  contents:
-  - transreg
-  - coef.transreg
-  - predict.transreg
-
-- title: "Other functions"
-  contents:
-  - multiridge
-  - simulate
-  - compare
-  - .residuals
-  - .signdisc
-  - extract
-  - calibrate
-  - weights.transreg
-  - print.transreg
-  - fitted.transreg
-  - plot.transreg
