--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: transreg
 Title: Penalised regression with multiple sets of prior effects
-Version: 0.99.2
+Version: 1.0.0
 Authors@R: person("Armin","Rauschenberger",,"armin.rauschenberger@uni.lu",role=c("aut","cre"),comment=c(ORCID="0000-0001-6498-4801"))
 Description: Improves the predictive performance of ridge and lasso regression exploiting one or more sources of prior information on the importance and direction of effects. For running the vignette, install fwelnet from GitHub <https://github.com/kjytay/fwelnet>.
 Imports: glmnet, starnet, joinet
 Suggests: knitr, testthat, rmarkdown, mvtnorm
-Enhances: glmtrans, ecpc, fwelnet, GRridge, doMC, palasso, xtable, devtools, multiridge, CVXR
+Enhances: glmtrans, ecpc, fwelnet, GRridge, doMC, palasso, xtable, devtools, multiridge, CVXR, xrnet
 VignetteBuilder: knitr
 License: GPL-3
 Encoding: UTF-8
