--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: transreg
 Title: Penalised regression with multiple sets of prior effects
 Version: 1.0.0
 Authors@R: person("Armin","Rauschenberger",,"armin.rauschenberger@uni.lu",role=c("aut","cre"),comment=c(ORCID="0000-0001-6498-4801"))
-Description: Improves the predictive performance of ridge and lasso regression exploiting one or more sources of prior information on the importance and direction of effects. For running the vignette, install fwelnet from GitHub <https://github.com/kjytay/fwelnet>.
+Description: Improves the predictive performance of ridge and lasso regression exploiting one or more sources of prior information on the importance and direction of effects (Rauschenberger et al. 2023, <doi:10.48550/arXiv.2212.08581>).
 Imports: glmnet, starnet, joinet
 Suggests: knitr, testthat, rmarkdown, mvtnorm
-Enhances: glmtrans, ecpc, fwelnet, GRridge, doMC, palasso, xtable, devtools, multiridge, CVXR, xrnet
+Enhances: glmtrans, xrnet, ecpc, fwelnet, doMC, palasso, xtable, devtools, CVXR
 VignetteBuilder: knitr
 License: GPL-3
 Encoding: UTF-8
