--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: transreg
 Title: Penalised Regression with Multiple Sets of Prior Effects
 Version: 1.0.0
 Authors@R: person("Armin","Rauschenberger",,"armin.rauschenberger@uni.lu",role=c("aut","cre"),comment=c(ORCID="0000-0001-6498-4801"))
-Description: Improves the predictive performance of ridge and lasso regression exploiting one or more sources of prior information on the importance and direction of effects (Rauschenberger et al. 2023, <doi:10.48550/arXiv.2212.08581>). For running the vignette, install fwelnet from GitHub <https://github.com/kjytay/fwelnet>.
+Description: Improves the predictive performance of ridge and lasso regression exploiting one or more sources of prior information on the importance and direction of effects (Rauschenberger and others 2023, <doi:10.48550/arXiv.2212.08581>). For running the vignette, install 'fwelnet' from GitHub <https://github.com/kjytay/fwelnet>.
 Imports: glmnet, starnet, joinet
 Suggests: knitr, testthat, rmarkdown, mvtnorm
 Enhances: glmtrans, xrnet, ecpc, fwelnet, doMC, palasso, xtable, devtools, CVXR
