--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -25,8 +25,12 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
+          extra-packages: any::rcmdcheck, any::remotes
           needs: check
+
+      - name: Install GitHub
+        run: remotes::install_github("kjytay/fwelnet")
+        shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v2
         with:
