--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,8 +11,8 @@ navbar:
   left:
     - text: "functions"
       href: reference/index.html
-    - text: "abstract"
-      href: articles/abstract.html
+    - text: "article"
+      href: articles/article.html
     - text: "analysis"
       href: articles/analysis.html
     - text: "news"
