--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -26,12 +26,12 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           dependencies: '"hard"'
-          extra-packages: any::rcmdcheck, any::remotes
+          extra-packages: any::rcmdcheck, any::remotes, fwelnet=?ignore
           needs: check
 
-      - name: Install GitHub
-        run: remotes::install_github("kjytay/fwelnet")
-        shell: Rscript {0}
+#      - name: Install GitHub
+#        run: remotes::install_github("kjytay/fwelnet")
+#        shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v2
         with:
