--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -25,8 +25,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          dependencies: '"hard"'
-          extra-packages: any::rcmdcheck, any::remotes, fwelnet=?ignore
+          extra-packages: any::rcmdcheck, fwelnet=?ignore
           needs: check
 
 #      - name: Install GitHub
