--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: transreg
 Version: 1.0.3
-Title: Penalised Regression with Multiple Sets of Prior Effects
-Description: Improves the predictive performance of ridge and lasso regression exploiting one or more sources of prior information on the importance and direction of effects (Rauschenberger and others 2023, <doi:10.1093/bioinformatics/btad680>). For running the vignette, install 'fwelnet' from 'GitHub' <https://github.com/kjytay/fwelnet>.
+Title: Penalised Regression with Multiple Sets of Prior Effects ('Transfer Learning')
+Description: Improves the predictive performance of ridge and lasso regression exploiting one or more sources of prior information on the importance and direction of effects (Rauschenberger and others 2023, <doi:10.1093/bioinformatics/btad680>). For running the vignette (optional), install 'fwelnet' from 'GitHub' <https://github.com/kjytay/fwelnet>.
 Depends: R (>= 3.0.0)
 Imports: glmnet, starnet, joinet
 Suggests: knitr, testthat, rmarkdown, markdown, mvtnorm, remotes, glmtrans, xrnet, ecpc, fwelnet, doMC, palasso, xtable, devtools, CVXR
