--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,5 @@ License: GPL-3
 Encoding: UTF-8
 VignetteBuilder: knitr
 RoxygenNote: 7.3.2
-URL: https://rauschenberger.github.io/transreg/
-BugReports: https://github.com/rauschenberger/transreg
+URL: https://github.com/rauschenberger/transreg, https://rauschenberger.github.io/transreg/
+BugReports: https://github.com/rauschenberger/transreg/issues
